--- a/categories/templates/categories.html
+++ b/categories/templates/categories.html
@@ -35,7 +35,7 @@
 
 <div class="mt-20">
 	<div class="flex mx-4 mb-4">
-		<button id="openFilterButton" onclick="showFilterModal()" class="text-white bg-[#8a6420] px-3 py-2 hover:bg-[#5c4215] transition 0.3s ease">
+		<button id="openFilterButton" onclick="showFilterModal()" class="text-white bg-[#8a6420] px-3 py-2 hover:bg-[#5c4215] transition 0.3s ease rounded-md">
 			<div class="flex">
 				<svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="2 0 24 24">
 					<path d="M10.83 5a3.001 3.001 0 0 0-5.66 0H4a1 1 0 1 0 0 2h1.17a3.001 3.001 0 0 0 5.66 0H20a1 1 0 1 0 0-2h-9.17ZM4 11h9.17a3.001 3.001 0 0 1 5.66 0H20a1 1 0 1 1 0 2h-1.17a3.001 3.001 0 0 1-5.66 0H4a1 1 0 1 1 0-2Zm1.17 6H4a1 1 0 1 0 0 2h1.17a3.001 3.001 0 0 0 5.66 0H20a1 1 0 1 0 0-2h-9.17a3.001 3.001 0 0 0-5.66 0Z"/>
@@ -45,8 +45,8 @@
 		</button>
 		<div id="searchDiv">
 			<form id="searchForm">
-				<input type="text" id="searchBar" placeholder="Search food or restaurant" class="py-2 px-3">
-				<button id="searchButton" class="ml-1 px-2 py-2 hover:bg-[#8a6420] transition 0.3s ease">
+				<input type="text" id="searchBar" placeholder="Search food or restaurant" class="py-2 px-3 rounded-md">
+				<button id="searchButton" class="ml-1 px-2 py-2 hover:bg-[#8a6420] rounded-md transition 0.3s ease">
 					<svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24">
 						<path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z"/>
 					</svg>
@@ -61,14 +61,15 @@
     
 	<div id="showCards"></div>
 
+	<!-- Filter Modal -->
 	<div id="filterModal" class="hidden fixed inset-0 z-50 bg-black bg-opacity-50 flex items-center justify-center">
-		<div class="bg-white opacity-100 p-6 w-full lg:w-1/3">
+		<div class="bg-white rounded-[25px] opacity-100 p-6 w-full lg:w-1/3">
 			<form id="filterForm">
 				<div class="flex justify-center">
 					<h1 class="text-[#5c4215] text-[2rem] mb-6"><b>Filter by</b></h1>
 				</div>
 
-				<h4 class="text-white mb-3 bg-[#8a6420] px-2 py-1">
+				<h4 class="text-white mb-3 bg-[#8a6420] rounded-md px-2 py-1">
 					<b>Category</b>
 				</h4>
 				<input type="radio" id="cat1" name="foodCat" value="Makanan Berat dan Nasi">
@@ -83,7 +84,7 @@
 				<input type="radio" id="cat4" name="foodCat" value="Makanan Ringan dan Cemilan">
 				<label for="cat1" class="ml-2">Makanan Ringan dan Cemilan</label><br><br>
 
-				<h4 class="text-white mb-3 mt-1 bg-[#8a6420] px-2 py-1">
+				<h4 class="text-white mb-3 mt-1 rounded-md bg-[#8a6420] px-2 py-1">
 					<b>Price Range</b>
 				</h4>
 				<input type="radio" id="range1" name="priceRange" value="Range1">
@@ -103,8 +104,8 @@
 				</div>
 				
 				<div class="flex justify-center">
-					<button id="submitFilter" class="w-[6rem] bg-[#4c6444] hover:bg-[#3d5237] py-2 text-white mr-5"><b>Filter</b></button>
-					<button id="cancelFilter" class="w-[6rem] bg-[#fa574b] hover:bg-[#d1392e] py-2 text-white"><b>Cancel</b></button>	
+					<button id="submitFilter" class="w-[6rem] bg-[#4c6444] hover:bg-[#3d5237] py-2 rounded-md text-white mr-5"><b>Filter</b></button>
+					<button id="cancelFilter" class="w-[6rem] bg-gray-500 hover:bg-gray-600 py-2 rounded-md text-white"><b>Cancel</b></button>	
 				</div>
 			</form>
 		</div>
@@ -212,7 +213,6 @@
 										<p id="popupCat-${item.pk}"class="text-gray-700 mb-2 text-center"></p> <!-- Category -->
 										<p id="popupLocation-${item.pk}" class="text-gray-900 font-semibold text-sm mb-2 text-center"></p>
 										<p id="popupContact-${item.pk}" class="text-gray-900 font-semibold text-sm mb-2 text-center"></p>
-										
 
 										<button onclick="closePopup('${item.pk}')" class="absolute top-2 right-2 bg-[#8a6420] hover:bg-[#4d2d18] text-white py-1 px-3 font-bold rounded-2xl">X</button>
 									</div>
