--- a/categories/templates/categories_admin.html
+++ b/categories/templates/categories_admin.html
@@ -35,7 +35,7 @@
 
 <div class="mt-20">
 	<div class="flex mx-4 mb-4">
-		<button id="openFilterButton" onclick="showFilterModal()" class="text-white bg-[#8a6420] px-3 py-2 hover:bg-[#5c4215] transition 0.3s ease">
+		<button id="openFilterButton" onclick="showFilterModal()" class="text-white bg-[#8a6420] px-3 py-2 hover:bg-[#5c4215] transition 0.3s ease rounded-md">
 			<div class="flex">
 				<svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="2 0 24 24">
 					<path d="M10.83 5a3.001 3.001 0 0 0-5.66 0H4a1 1 0 1 0 0 2h1.17a3.001 3.001 0 0 0 5.66 0H20a1 1 0 1 0 0-2h-9.17ZM4 11h9.17a3.001 3.001 0 0 1 5.66 0H20a1 1 0 1 1 0 2h-1.17a3.001 3.001 0 0 1-5.66 0H4a1 1 0 1 1 0-2Zm1.17 6H4a1 1 0 1 0 0 2h1.17a3.001 3.001 0 0 0 5.66 0H20a1 1 0 1 0 0-2h-9.17a3.001 3.001 0 0 0-5.66 0Z"/>
@@ -45,8 +45,8 @@
 		</button>
 		<div id="searchDiv">
 			<form id="searchForm">
-				<input type="text" id="searchBar" placeholder="Search food or restaurant" class="py-2 px-3">
-				<button id="searchButton" class="ml-1 px-2 py-2 hover:bg-[#8a6420] transition 0.3s ease">
+				<input type="text" id="searchBar" placeholder="Search food or restaurant" class="py-2 px-3 rounded-md">
+				<button id="searchButton" class="ml-1 px-2 py-2 hover:bg-[#8a6420] rounded-md transition 0.3s ease">
 					<svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24">
 						<path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z"/>
 					</svg>
@@ -60,7 +60,7 @@
 	</div>
 
 	<div class="flex justify-center mb-10">
-		<button data-modal-target="crudModal" data-modal-toggle="crudModal" class="text-white bg-[#8a6420] hover:bg-[#5c4215]" onclick="showModal()">
+		<button data-modal-target="crudModal" data-modal-toggle="crudModal" class="text-white px-3 py-2 rounded-md bg-[#8a6420] hover:bg-[#5c4215]" onclick="showModal()">
 			Add New Product by AJAX
 		</button>
 	</div>
@@ -102,6 +102,12 @@
 				  <label for="restaurant" class="block text-sm font-medium text-gray-700 mb-2">Restaurant</label>
 				  <input type="text" id="restaurant" name="restaurant" class="input-field" placeholder="Enter restaurant name" required>
 				</div>
+
+				<!-- Location -->
+				<div class="mb-4">
+					<label for="location" class="block text-sm font-medium text-gray-700 mb-2">Location</label>
+					<input type="text" id="location" name="location" class="input-field" placeholder="Enter location" required>
+				</div>
 			  </div>
 			  
 			  <div class="space-y-4">
@@ -123,12 +129,6 @@
 				  </select>
 				</div>
   
-				<!-- Location -->
-				<div class="mb-4">
-				  <label for="location" class="block text-sm font-medium text-gray-700 mb-2">Location</label>
-				  <input type="text" id="location" name="location" class="input-field" placeholder="Enter location" required>
-				</div>
-  
 				<!-- Contact -->
 				<div class="mb-4">
 				  <label for="contact" class="block text-sm font-medium text-gray-700 mb-2">Contact</label>
@@ -146,15 +146,15 @@
 	  </div>
 	</div>
   
-
+	<!-- Filter Modal -->
 	<div id="filterModal" class="hidden fixed inset-0 z-50 bg-black bg-opacity-50 flex items-center justify-center">
-		<div class="bg-white opacity-100 p-6 w-full lg:w-1/3">
+		<div class="bg-white rounded-[25px] opacity-100 p-6 w-full lg:w-1/3">
 			<form id="filterForm">
 				<div class="flex justify-center">
 					<h1 class="text-[#5c4215] text-[2rem] mb-6"><b>Filter by</b></h1>
 				</div>
 
-				<h4 class="text-white mb-3 bg-[#8a6420] px-2 py-1">
+				<h4 class="text-white mb-3 bg-[#8a6420] rounded-md px-2 py-1">
 					<b>Category</b>
 				</h4>
 				<input type="radio" id="cat1" name="foodCat" value="Makanan Berat dan Nasi">
@@ -169,7 +169,7 @@
 				<input type="radio" id="cat4" name="foodCat" value="Makanan Ringan dan Cemilan">
 				<label for="cat1" class="ml-2">Makanan Ringan dan Cemilan</label><br><br>
 
-				<h4 class="text-white mb-3 mt-1 bg-[#8a6420] px-2 py-1">
+				<h4 class="text-white mb-3 mt-1 rounded-md bg-[#8a6420] px-2 py-1">
 					<b>Price Range</b>
 				</h4>
 				<input type="radio" id="range1" name="priceRange" value="Range1">
@@ -189,8 +189,8 @@
 				</div>
 				
 				<div class="flex justify-center">
-					<button id="submitFilter" class="w-[6rem] bg-[#4c6444] hover:bg-[#3d5237] py-2 text-white mr-5"><b>Filter</b></button>
-					<button id="cancelFilter" class="w-[6rem] bg-[#fa574b] hover:bg-[#d1392e] py-2 text-white"><b>Cancel</b></button>	
+					<button id="submitFilter" class="w-[6rem] bg-[#4c6444] hover:bg-[#3d5237] py-2 rounded-md text-white mr-5"><b>Filter</b></button>
+					<button id="cancelFilter" class="w-[6rem] bg-gray-500 hover:bg-gray-600 py-2 rounded-md text-white"><b>Cancel</b></button>	
 				</div>
 			</form>
 		</div>
@@ -266,7 +266,7 @@
 								<div class="relative top-5 mb-6 break-inside-avoid flex flex-col items-center transition-transform duration-300 cursor-pointer"
 									style="width: 300px; height: 320px;">
 
-									<div class="bg-gray-200 w-[100%] h-[100%] flex justify-center items-center overflow-hidden">
+									<div class="bg-gray-200 w-[100%] h-[100%] flex justify-center items-center overflow-hidden rounded-xl">
 										${item.fields.image ? 
 										`<img src="${imageUrl}" alt="Product Image" class="object-cover w-full h-full hover:brightness-50 transition-all duration-100" />` :
 										`<div class="flex items-center justify-center w-full h-full text-gray-500">No Image Available</div>`}
@@ -284,21 +284,37 @@
 
 								<!-- Popup Modal for Product Details -->
 								<div id="productPopup-${item.pk}" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" onclick="closePopup('${item.pk}')">
-									<div class="bg-white p-6 shadow-lg max-w-md w-full mx-auto relative" onclick="event.stopPropagation()" style="width: 400px;">
+									<div class="bg-white p-6 shadow-lg rounded-2xl max-w-md w-full mx-auto relative" onclick="event.stopPropagation()" style="width: 400px;">
 										<h3 id="popupName-${item.pk}" class="font-bold text-lg mb-2 text-black text-center"></h3>
 
-										<div class="bg-gray-200 flex justify-center items-center overflow-hidden mb-4 w-[100%] h-[100%] mx-auto">
+										<div class="bg-gray-200 flex justify-center items-center overflow-hidden mb-4 w-[100%] h-[100%] mx-auto rounded-2xl">
 											<div class="flex justify-center items-center w-full h-full text-gray-500">
 												<img id="popupImage-${item.pk}" src="" alt="Product Image" class="object-cover w-full h-full" style="aspect-ratio: 1/1; max-width: 100%; max-height: 100%;" />
 											</div>
 										</div>
 
-										<p id="popupLocation-${item.pk}" class="text-gray-600 text-sm mb-2 text-center"></p>
-										<p id="popupContact-${item.pk}" class="text-gray-600 text-sm mb-2 text-center"></p>
-										<p id="popupCat-${item.pk}"class="text-gray-700 mb-2 text-center"></p> <!-- Category -->
+										<p id="popupDescription-${item.pk}" class="text-gray-700 mb-2 text-center"></p>
 										<p id="popupPrice-${item.pk}" class="text-gray-900 font-semibold text-center mb-2"></p>
+										<p id="popupCat-${item.pk}"class="text-gray-700 mb-2 text-center"></p> <!-- Category -->
+										<p id="popupLocation-${item.pk}" class="text-gray-900 font-semibold text-sm mb-2 text-center"></p>
+										<p id="popupContact-${item.pk}" class="text-gray-900 font-semibold text-sm mb-2 text-center"></p>
 
-										<button onclick="closePopup('${item.pk}')" class="absolute top-2 right-2 bg-[#8a6420] hover:bg-[#4d2d18] text-white py-1 px-3 font-bold">close</button>
+										<!-- Edit and Delete Buttons -->
+										<div class="flex justify-center space-x-4 mb-4">
+										<a href="/edit-product-cat/${item.pk}"  class="edit-button bg-white hover:bg-[#c9c9c9] text-black rounded-full p-2 transition duration-300 shadow-md">
+											<svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9" viewBox="0 0 20 20" fill="currentColor">
+												<path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+											</svg>
+										</a> 
+										<a href="/delete-product-cat/${item.pk}" class="bg-red-500 hover:bg-red-600 text-white rounded-full p-2 transition duration-300 shadow-md">
+											<svg xmlns="http://www.w3.org/2000/svg" class="h-9 w-9" viewBox="0 0 20 20" fill="currentColor">
+											<path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd" />
+											</svg>
+										</a>
+										</div>
+										
+
+										<button onclick="closePopup('${item.pk}')" class="absolute top-2 right-2 bg-[#8a6420] hover:bg-[#4d2d18] text-white py-1 px-3 font-bold rounded-2xl">X</button>
 									</div>
 								</div>
 							</div>
@@ -382,7 +398,7 @@
   }
 
   function addProduct() {
-    fetch("{% url 'categories:add_product_ajax' %}", {
+    fetch("{% url 'categories:add_product_ajax_cat' %}", {
       method: "POST",
       body: new FormData(document.querySelector('#productForm')),
     })
@@ -420,7 +436,7 @@
       }, 150); 
   }
 
-  document.getElementById("submitProduct").addEventListener("click", (e) => {
+  document.getElementById("productForm").addEventListener("submit", (e) => {
     e.preventDefault();
     addProduct();
 	hideModal();
@@ -428,39 +444,6 @@
 
   document.getElementById("cancelButton").addEventListener("click", hideModal);
   document.getElementById("closeModalBtn").addEventListener("click", hideModal);
-
-  document.addEventListener("DOMContentLoaded", function () {
-    // Listen for the form submission
-    document.getElementById("productForm").addEventListener("submit", function (event) {
-      event.preventDefault(); // Prevent the form from submitting traditionally
-  
-      // Create a FormData object from the form
-      const formData = new FormData(this);
-  
-      // Send an AJAX request to the server
-      fetch("/add_product/", {
-        method: "POST",
-        body: formData,
-        headers: {
-          "X-CSRFToken": document.querySelector("[name=csrfmiddlewaretoken]").value, // Required for Django
-        },
-      })
-        .then((response) => response.json()) // Assuming the server returns JSON
-        .then((data) => {
-          if (data.success) {
-            alert("Product added successfully!");
-            document.getElementById("crudModal").classList.add("hidden"); // Hide modal after submission
-            // Optionally, clear the form or refresh product list here
-          } else {
-            alert("Failed to add product. Please try again.");
-          }
-        })
-        .catch((error) => {
-          console.error("Error:", error);
-          alert("An error occurred while saving the product.");
-        });
-    });
-  });
 
 </script>
 
