--- a/main/templates/main_admin.html
+++ b/main/templates/main_admin.html
@@ -56,97 +56,93 @@
     <a href="{% url 'main:create_product' %}" class="w-auto flex justify-center py-2 px-4 text-sm rounded-md font-medium text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out transform hover:scale-105">
       Add New Product
     </a>
-    <button data-modal-target="crudModal" data-modal-toggle="crudModal" class="w-auto ml-4 flex justify-center py-2 px-4 text-sm rounded-md font-medium text-black bg-white hover:bg-gray-200 focus:outline-none focus:ring-0 transition duration-200 ease-in-out transform hover:scale-105" onclick="showModal();">
-      Add New Product by AJAX
-    </button>
+		<button data-modal-target="crudModal" data-modal-toggle="crudModal" class="text-white ml-4 px-3 py-2 rounded-md bg-[#8a6420] hover:bg-[#5c4215]" onclick="showModal()">
+			Add New Product by AJAX
+		</button>
   </div>  
 
   <img src="{% static 'images/subtitle-explore.png' %}" class="ml-4 mr-4" style="width: 170px; height: auto; object-fit: contain;" alt="Subtitle Explore">
 
+  <div id="showCards"></div>
+
   <div id="product_cards"></div>
-  <div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-black bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
-    <div id="crudModalContent" class="relative bg-gray-200 rounded-[25px] shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
-      <!-- Modal header -->
-      <div class="flex items-center justify-between p-4 border-b rounded-t">
-        <h3 class="text-xl font-semibold text-gray-900 text-center w-full">Add New Product</h3>
-        <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" id="closeModalBtn">
-          <svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
-          </svg>
-          <span class="sr-only">Close modal</span>
-        </button>
-      </div>
-      <!-- Modal body -->
-      <div class="px-6 py-4 space-y-6 form-style max-h-[70vh] overflow-y-auto">
-        <form id="productForm" enctype="multipart/form-data">
-          <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-            <!-- Name -->
-            <div class="space-y-4">
-              <div class="mb-4">
-                <label for="name" class="block text-sm font-medium text-gray-700 mb-2">Name</label>
-                <input type="text" id="name" name="name" class="input-field" placeholder="Enter product name" required>
-              </div>
-              
-              <!-- Price -->
-              <div class="mb-4">
-                <label for="price" class="block text-sm font-medium text-gray-700 mb-2">Price</label>
-                <input type="number" id="price" name="price" class="input-field" placeholder="Enter product price" required>
-              </div>
-              
-              <!-- Quantity -->
-              <div class="mb-4">
-                <label for="quantity" class="block text-sm font-medium text-gray-700 mb-2">Quantity</label>
-                <input type="number" id="quantity" name="quantity" class="input-field" min="1" placeholder="Enter available quantity" required>
-              </div>
+	<div id="crudModal" tabindex="-1" aria-hidden="true" class="hidden fixed inset-0 z-50 w-full flex items-center justify-center bg-black bg-opacity-50 overflow-x-hidden overflow-y-auto transition-opacity duration-300 ease-out">
+	  <div id="crudModalContent" class="relative bg-gray-200 rounded-[25px] shadow-lg w-5/6 sm:w-3/4 md:w-1/2 lg:w-1/3 mx-4 sm:mx-0 transform scale-95 opacity-0 transition-transform transition-opacity duration-300 ease-out">
+		<!-- Modal header -->
+		<div class="flex items-center justify-between p-4 border-b rounded-t">
+		  <h3 class="text-xl font-semibold text-gray-900 text-center w-full">Add New Product</h3>
+		  <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center" id="closeModalBtn">
+			<svg aria-hidden="true" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+			  <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+			</svg>
+			<span class="sr-only">Close modal</span>
+		  </button>
+		</div>
+		<!-- Modal body -->
+		<div class="px-6 py-4 space-y-6 form-style max-h-[70vh] overflow-y-auto">
+		  <form id="productForm" enctype="multipart/form-data">
+			<div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+			  <!-- Name -->
+			  <div class="space-y-4">
+				<div class="mb-4">
+				  <label for="name" class="block text-sm font-medium text-gray-700 mb-2">Name</label>
+				  <input type="text" id="name" name="name" class="input-field" placeholder="Enter product name" required>
+				</div>
+				
+				<!-- Price -->
+				<div class="mb-4">
+				  <label for="price" class="block text-sm font-medium text-gray-700 mb-2">Price</label>
+				  <input type="number" id="price" name="price" class="input-field" placeholder="Enter product price" required>
+				</div>
+  
+				<!-- Restaurant -->
+				<div class="mb-4">
+				  <label for="restaurant" class="block text-sm font-medium text-gray-700 mb-2">Restaurant</label>
+				  <input type="text" id="restaurant" name="restaurant" class="input-field" placeholder="Enter restaurant name" required>
+				</div>
 
-              <!-- Restaurant -->
-              <div class="mb-4">
-                <label for="restaurant" class="block text-sm font-medium text-gray-700 mb-2">Restaurant</label>
-                <input type="text" id="restaurant" name="restaurant" class="input-field" placeholder="Enter restaurant name" required>
-              </div>
-            </div>
-            
-            <div class="space-y-4">
-
-              <!-- Image -->
-              <div class="mb-4">
-                <label for="image" class="block text-sm font-medium text-gray-700 mb-2">Product Image</label>
-                <input type="file" id="image" name="image" class="input-field" accept="image/*">
-              </div>
-
-              <!-- Category -->
-              <div class="mb-4">
-                <label for="cat" class="block text-sm font-medium text-gray-700 mb-2">Category</label>
-                <select id="cat" name="cat" class="input-field" required>
-                  <option value="Makanan Berat dan Nasi">Makanan Berat dan Nasi</option>
-                  <option value="Olahan Ayam dan Daging">Olahan Ayam dan Daging</option>
-                  <option value="Mie, Pasta, dan Spaghetti">Mie, Pasta, dan Spaghetti</option>
-                  <option value="Makanan Ringan dan Cemilan">Makanan Ringan dan Cemilan</option>
-                </select>
-              </div>
-
-              <!-- Location -->
-              <div class="mb-4">
-                <label for="location" class="block text-sm font-medium text-gray-700 mb-2">Location</label>
-                <input type="text" id="location" name="location" class="input-field" placeholder="Enter location" required>
-              </div>
-
-              <!-- Contact -->
-              <div class="mb-4">
-                <label for="contact" class="block text-sm font-medium text-gray-700 mb-2">Contact</label>
-                <input type="text" id="contact" name="contact" class="input-field" placeholder="Enter contact number" required>
-              </div>
-            </div>
-          </div>
-        </form>
-      </div>
-      <!-- Modal footer -->
-      <div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
-        <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Cancel</button>
-        <button type="submit" id="submitproduct" form="productForm" class="bg-[#8a6420] hover:bg-[#4d2d18] text-white font-bold py-2 px-4 rounded-lg">Save</button>
-      </div>
-    </div>
-  </div>
+				<!-- Location -->
+				<div class="mb-4">
+					<label for="location" class="block text-sm font-medium text-gray-700 mb-2">Location</label>
+					<input type="text" id="location" name="location" class="input-field" placeholder="Enter location" required>
+				</div>
+			  </div>
+			  
+			  <div class="space-y-4">
+  
+				<!-- Image -->
+				<div class="mb-4">
+				  <label for="image" class="block text-sm font-medium text-gray-700 mb-2">Product Image</label>
+				  <input type="file" id="image" name="image" class="input-field" accept="image/*">
+				</div>
+  
+				<!-- Category -->
+				<div class="mb-4">
+				  <label for="cat" class="block text-sm font-medium text-gray-700 mb-2">Category</label>
+				  <select id="cat" name="cat" class="input-field" required>
+					<option value="Makanan Berat dan Nasi">Makanan Berat dan Nasi</option>
+					<option value="Olahan Ayam dan Daging">Olahan Ayam dan Daging</option>
+					<option value="Mie, Pasta, dan Spaghetti">Mie, Pasta, dan Spaghetti</option>
+					<option value="Makanan Ringan dan Cemilan">Makanan Ringan dan Cemilan</option>
+				  </select>
+				</div>
+  
+				<!-- Contact -->
+				<div class="mb-4">
+				  <label for="contact" class="block text-sm font-medium text-gray-700 mb-2">Contact</label>
+				  <input type="text" id="contact" name="contact" class="input-field" placeholder="Enter contact number" required>
+				</div>
+			  </div>
+			</div>
+		  </form>
+		</div>
+		<!-- Modal footer -->
+		<div class="flex flex-col space-y-2 md:flex-row md:space-y-0 md:space-x-2 p-6 border-t border-gray-200 rounded-b justify-center md:justify-end">
+		  <button type="button" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded-lg" id="cancelButton">Cancel</button>
+		  <button type="submit" id="submitProduct" form="productForm" class="bg-[#8a6420] hover:bg-[#4d2d18] text-white font-bold py-2 px-4 rounded-lg">Save</button>
+		</div>
+	  </div>
+	</div>
 
   <div class="flex fixed bottom-6 right-6 items-center bg-[#4d2d18] py-2 px-4 w-fit">
     <h1 class="text-white text-center text-sm">
